movedashboard file to root

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <!-- Internal Style -->
-    <link rel="stylesheet" href="../styles/dashboard.css">
+    <link rel="stylesheet" href="./styles/dashboard.css">
 
     <title>Fixture</title>
   </head>
@@ -22,17 +22,17 @@
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-light navigation">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="logo"></a>
+        <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse nav-right" id="navbarSupportedContent">
           <ul class="navbar-nav mr-0 mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"><div class="around-icon"><img  src="../images/icn.png" alt="icon"></div></a>
+              <a class="nav-link active" aria-current="page" href="#"><div class="around-icon"><img  src="./images/icn.png" alt="icon"></div></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><div class="around-icon"><img class="nav-icon-2" src="../images/image 4.svg" alt="icon"></div></a>
+              <a class="nav-link" href="#"><div class="around-icon"><img class="nav-icon-2" src="./images/image 4.svg" alt="icon"></div></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
