create button type on main

--- a/dashboard.html
+++ b/dashboard.html
@@ -143,7 +143,7 @@
               <img src="./images/profile-pic.png" alt="user">
             </div>
 
-            <p class="p-comp-name fw-bold">Beauty Box Salon</p>
+            <p class="p-comp-name fw-bold mb-0">Beauty Box Salon</p>
             <p class="p-comp-cat">Parlour/Grooming</p>
           </div>
 
@@ -179,12 +179,12 @@
               <p><span class="fs-14 c-grey">15 mints, One on One</span></p>
             </div>
             <div>
-              <i class="far fa-2x fa-edit"></i>
+              <i type="button" class="far fa-2x fa-edit"></i>
             </div>
           </div>
 
           <div class="mb-2">
-            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span class="fs-14">Google Meet Conference</span>
+            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span type="button" class="fs-14">Google Meet Conference</span>
           </div>
 
 
@@ -195,8 +195,10 @@
         <div class="hr my-3"></div>
 
         <div class="d-flex px-4 align-items-center">
-          <img class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p> 
-          <img class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
+          <div type="button" class="d-flex">
+            <img  class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p>
+          </div>   
+          <img type="button" class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
         </div>
 
         
@@ -211,12 +213,12 @@
               <p><span class="fs-14 c-grey">30 mints, One on One</span></p>
             </div>
             <div>
-              <i class="far fa-2x fa-edit"></i>
+              <i type="button" class="far fa-2x fa-edit"></i>
             </div>
           </div>
 
           <div class="mb-2">
-            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span class="fs-14">Google Meet Conference</span>
+            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span type="button"  class="fs-14">Google Meet Conference</span>
           </div>
 
 
@@ -227,8 +229,10 @@
         <div class="hr my-3"></div>
 
         <div class="d-flex px-4 align-items-center">
-          <img class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p> 
-          <img class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
+          <div type="button" class="d-flex">
+            <img  class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p>
+          </div>   
+          <img type="button" class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
         </div>
 
         
