--- a/dashboard.html
+++ b/dashboard.html
@@ -166,8 +166,8 @@
         </div>
       </div>
       <div class="calender">
-        <button class="btn btn-outline-primary cal-btn"><i class="far fa-calendar-alt fa-lg pe-2"></i>CALENDER <i
-            class="fas fa-chevron-down ps-2"></i></button>
+        <button class=" btn btn-outline-primary cal-btn"><i class="c-blue far fa-calendar-alt fa-lg me-2"></i>CALENDER <i
+            class="c-blue fas fa-chevron-down ps-2"></i></button>
       </div>
 
       <!-- Bottom Left -->
@@ -179,7 +179,7 @@
               <p><span class="fs-14 c-grey">15 mints, One on One</span></p>
             </div>
             <div>
-              <i type="button" class="far fa-2x fa-edit"></i>
+              <i type="button" class="c-blue far fa-2x fa-edit"></i>
             </div>
           </div>
 
@@ -195,10 +195,10 @@
         <div class="hr my-3"></div>
 
         <div class="d-flex px-4 align-items-center">
-          <div type="button" class="d-flex">
-            <img  class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p>
+          <div type="button" class="d-flex copy-link">
+            <i class="c-blue far fa-2x fa-clone"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
           </div>   
-          <img type="button" class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
+          <i class="c-blue ms-auto fa-2x fas fa-share-square"></i>
         </div>
 
         
@@ -213,7 +213,7 @@
               <p><span class="fs-14 c-grey">30 mints, One on One</span></p>
             </div>
             <div>
-              <i type="button" class="far fa-2x fa-edit"></i>
+              <i type="button" class="c-blue far fa-2x fa-edit"></i>
             </div>
           </div>
 
@@ -229,10 +229,10 @@
         <div class="hr my-3"></div>
 
         <div class="d-flex px-4 align-items-center">
-          <div type="button" class="d-flex">
-            <img  class="copy-img" src="./images/copy-icn.png" alt=""><p class="c-blue mb-0 ms-2"> Copy Link</p>
+          <div type="button" class="d-flex copy-link">
+            <i class="c-blue far fa-2x fa-clone"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
           </div>   
-          <img type="button" class="icn-sz ms-auto" src="./images/share-icn.png" alt="">
+          <i class="c-blue ms-auto fa-2x fas fa-share-square"></i>
         </div>
 
         
