change position of link button

--- a/dashboard.html
+++ b/dashboard.html
@@ -179,7 +179,7 @@
               <p><span class="fs-14 c-grey">15 mints, One on One</span></p>
             </div>
             <div>
-              <i type="button" class="c-blue far fa-2x fa-edit"></i>
+              <i type="button" class="c-blue far fa-lg fa-edit"></i>
             </div>
           </div>
 
@@ -196,9 +196,9 @@
 
         <div class="d-flex px-4 align-items-center">
           <div type="button" class="d-flex copy-link">
-            <i class="c-blue far fa-2x fa-clone"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
+            <i class="c-blue far fa-lg fa-clone copy-link-icn"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
           </div>   
-          <i class="c-blue ms-auto fa-2x fas fa-share-square"></i>
+          <i class="c-blue ms-auto fa-lg fas fa-share-square"></i>
         </div>
 
         
@@ -213,7 +213,7 @@
               <p><span class="fs-14 c-grey">30 mints, One on One</span></p>
             </div>
             <div>
-              <i type="button" class="c-blue far fa-2x fa-edit"></i>
+              <i type="button" class="c-blue far fa-lg fa-edit"></i>
             </div>
           </div>
 
@@ -230,9 +230,9 @@
 
         <div class="d-flex px-4 align-items-center">
           <div type="button" class="d-flex copy-link">
-            <i class="c-blue far fa-2x fa-clone"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
+            <i class="c-blue far fa-lg fa-clone copy-link-icn"></i><p class="c-blue mb-0 ms-2"> Copy Link</p>
           </div>   
-          <i class="c-blue ms-auto fa-2x fas fa-share-square"></i>
+          <i class="c-blue ms-auto fa-lg fas fa-share-square"></i>
         </div>
 
         
