--- a/dashboard.html
+++ b/dashboard.html
@@ -124,22 +124,22 @@
       <div class="left pb-2">
 
         <!-- left top -->
-        <div class="left-top d-flex justify-content-between">
-          <div class="d-flex flex-column pt-5">
-            <h2 class="mb-0">Welcome Back!</h2>
-            <p class="user-name"><span>David's Dashboard</span></p>
+        <div class="left-top d-flex somu justify-content-between">
+          <div class="d-flex flex-column pt-sm-5 pb-sm-0 pb-sm-0 pt-2 pb-5 align-items-center align-items-sm-start">
+            <h2 class="mb-2 text-center text-sm-start lh-base">Welcome Back!</h2>
+            <p class="user-name text-center text-sm-start lh-base"><span>David's Dashboard</span></p>
           </div>
-          <div class="">
-            <img src="./images/Illus.png" alt="team meeting">
+          <div class="team-meet-img d-none d-sm-block">
+            <img  class=""src="./images/Illus.png" alt="team meeting">
           </div>
         </div>
 
         <!-- left bottom -->
 
-        <div class="left-bottom d-flex">
+        <div class="left-bottom d-flex flex-column flex-sm-row">
           <!-- left bottom left -->
-          <div class="left-bottom-left d-flex flex-column px-3 py-3">
-            <div class="user-img mb-5">
+          <div class="left-bottom-left d-flex align-items-center align-items-sm-start flex-column px-3 py-sm-3 pb-1">
+            <div class="user-img mb-2 mb-sm-4">
               <img src="./images/profile-pic.png" alt="user">
             </div>
 
@@ -148,18 +148,18 @@
           </div>
 
           <!-- left bottom right -->
-          <div class="left-bottom-right d-flex flex-column py-4 px-5">
-            <div class="d-flex justify-content-between">
+          <div class="left-bottom-right d-flex flex-column  py-sm-4 pt-2 pb-4 px-5">
+            <div class="d-flex justify-content-sm-between justify-content-center">
               <div class="d-flex flex-column">
-                <p class="fs-4 fw-bold c-orange">125</p>
+                <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1">125</p>
                 <p class="c-grey">Projects</p>
               </div>
-              <div class="d-flex flex-column">
-                <p class="fs-4 fw-bold c-orange">$123</p>
+              <div class="d-flex flex-column  ms-5 ms-sm-0">
+                <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1 ">$123</p>
                 <p class="c-grey">Total Revenue</p>
               </div>
             </div>
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-sm-end justify-content-center">
               <button class="view-insights px-3 py-3">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg" alt=""></button>
             </div>
           </div>
