mobile version left portion

--- a/dashboard.html
+++ b/dashboard.html
@@ -125,9 +125,9 @@
 
         <!-- left top -->
         <div class="left-top d-flex somu justify-content-between">
-          <div class="d-flex flex-column pt-sm-5 pb-sm-0 pb-sm-0 pt-2 pb-5 align-items-center align-items-sm-start">
+          <div class="d-flex flex-column pt-4 pb-5 pt-sm-5 pb-sm-0 pb-sm-0  align-items-center align-items-sm-start">
             <h2 class="mb-2 text-center text-sm-start lh-base">Welcome Back!</h2>
-            <p class="user-name text-center text-sm-start lh-base"><span>David's Dashboard</span></p>
+            <p class="user-name text-center text-sm-start lh-base pb-3"><span>David's Dashboard</span></p>
           </div>
           <div class="team-meet-img d-none d-sm-block">
             <img  class=""src="./images/Illus.png" alt="team meeting">
@@ -148,7 +148,7 @@
           </div>
 
           <!-- left bottom right -->
-          <div class="left-bottom-right d-flex flex-column  py-sm-4 pt-2 pb-4 px-5">
+          <div class="left-bottom-right d-flex flex-column  py-sm-4 pt-2 pb-4 px-sm-5 px-3">
             <div class="d-flex justify-content-sm-between justify-content-center">
               <div class="d-flex flex-column">
                 <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1">125</p>
