add padding in profile section in mail left

--- a/dashboard.html
+++ b/dashboard.html
@@ -138,7 +138,7 @@
 
         <div class="left-bottom d-flex flex-column flex-sm-row">
           <!-- left bottom left -->
-          <div class="left-bottom-left d-flex align-items-center align-items-sm-start flex-column px-3 py-sm-3 pb-1">
+          <div class="left-bottom-left d-flex align-items-center align-items-sm-start flex-column py-sm-3 pb-1">
             <div class="user-img mb-2 mb-sm-4">
               <img src="./images/profile-pic.png" alt="user">
             </div>
