spacing between profile pic and name of company

--- a/dashboard.html
+++ b/dashboard.html
@@ -143,7 +143,7 @@
               <img src="./images/profile-pic.png" alt="user">
             </div>
 
-            <p class="p-comp-name fw-bold mb-0">Beauty Box Salon</p>
+            <p class="p-comp-name fw-bold mb-0 mt-sm-3">Beauty Box Salon</p>
             <p class="p-comp-cat">Parlour/Grooming</p>
           </div>
 
