--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
   <!-- navbar top -->
   <nav class="navbar navbar-expand-lg navbar-light navigation pt-5 py-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="#"><img src="./images/logo1.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
