--- a/dashboard.html
+++ b/dashboard.html
@@ -43,14 +43,18 @@
         <div class="around-icon"><img src="./images/icn.png" alt="icon"></div>
       </a>
       <a class=" ms-md-1 ms-auto" href="#">
-        <div class="around-icon"><img class="nav-icon-2" src="./images/image 4.svg" alt="icon"></div>
+        <div class="around-icon">
+          <i class="far fa-bell"></i>
+          <div class="num d-flex align-items-center justify-content-center">
+            <span>0</span></div>
+        </div>
       </a>
       <div class="d-flex flex-row align-items-center">
         <div class="d-none d-md-block mx-3 d-flex flex-column align-items-end justify-content-center">
           <p class="p1 mb-0">David Morse</p>
           <p class="p2 mb-0">Admin</p>
         </div>
-        <div class="ms-2">
+        <div class="ms-2 user-img-div">
           <img src="./images/profile-pic.png" alt="">
         </div>
         <div><img src="./images/profile-menu-icn.png" alt="burger icon"></div>
