navbar icon size change

--- a/dashboard.html
+++ b/dashboard.html
@@ -43,8 +43,8 @@
         <div class="around-icon"><img src="./images/icn.png" alt="icon"></div>
       </a>
       <a class=" ms-md-1 ms-auto" href="#">
-        <div class="around-icon">
-          <i class="far fa-bell"></i>
+        <div class="around-icon ">
+          <i class="far fa-lg fa-bell ms-2 mt-2"></i>
           <div class="num d-flex align-items-center justify-content-center">
             <span>0</span></div>
         </div>
@@ -67,9 +67,11 @@
 
 
   <div class="nav-2 d-flex">
-    <a class="p-g" aria-current="page" href="#">My Sessions</a>
-    <a class="p-g href=" #">Scheduled Events</a>
-    <a class="p-g d-none d-md-block" href="#">Work Flow</a>
+    <div class="p-g-ul"><a class="p-g" aria-current="page" href="#">My Sessions</a></div>
+    <div class="p-g-ul"><a class="p-g" href="#">Scheduled Events</a></div>
+    <div class="p-g-ul"><a class="p-g d-none d-md-block" href="#">Work Flow</a></div>
+    
+    
     <button class="ms-auto btn-create">+ Create</button>
   </div>
 
