--- a/dashboard.html
+++ b/dashboard.html
@@ -129,7 +129,10 @@
           </div>
         </div>
       </div>
-      <div class="calender">
+      <div class="calender d-flex">
+        <form class="d-flex d-sm-none">
+          <i class="fas fa-search c-blue"></i><input class="form-control me-2" type="search" placeholder="Type To Search..." aria-label="Search">
+        </form>
         <button class=" btn btn-outline-primary cal-btn"><i class="c-blue far fa-calendar-alt fa-lg me-2"></i>CALENDER
           <i class="c-blue fas fa-chevron-down ps-2"></i></button>
       </div>
