--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
   <!-- Nav -->
 
   <!-- navbar top -->
-  <nav class="navbar pt-5 py-3">
+  <nav class="navbar pt-sm-5 pt-4 py-3">
     <div class="container-fluid p-0">
       <a class="navbar-brand" href="#"><img src="./images/logo1.png" alt="logo"></a>
       <a class=" ms-auto d-none d-md-block" aria-current="page" href="#">
