navbar and logo

--- a/dashboard.html
+++ b/dashboard.html
@@ -38,15 +38,17 @@
   <!-- navbar top -->
   <nav class="navbar pt-sm-5 pt-4 py-3">
     <div class="container-fluid p-0">
-      <a class="navbar-brand" href="#"><img src="./images/logo1.png" alt="logo"></a>
+      <a href="#"><img class="brand-logo" src="./images/Logo.png" alt="logo"></a>
       <a class=" ms-auto d-none d-md-block" aria-current="page" href="#">
         <div class="around-icon"><img src="./images/icn.png" alt="icon"></div>
       </a>
+      <!-- notification icon -->
       <a class=" ms-md-1 ms-auto" href="#">
         <div class="around-icon ">
           <i class="far fa-lg fa-bell ms-2 mt-2"></i>
           <div class="num d-flex align-items-center justify-content-center">
-            <span>0</span></div>
+            <span>0</span>
+          </div>
         </div>
       </a>
       <div class="d-flex flex-row align-items-center">
@@ -129,10 +131,14 @@
           </div>
         </div>
       </div>
+
+      <!-- Calendar -->
       <div class="calender d-flex">
-        <form class="d-flex d-sm-none">
+        <!-- Search Bar -->
+        <!-- <form class="d-flex d-sm-none">
           <i class="fas fa-search c-blue"></i><input class="form-control me-2" type="search" placeholder="Type To Search..." aria-label="Search">
-        </form>
+        </form> -->
+        <!-- calendar -->
         <button class=" btn btn-outline-primary cal-btn"><i class="c-blue far fa-calendar-alt fa-lg me-2"></i>CALENDER
           <i class="c-blue fas fa-chevron-down ps-2"></i></button>
       </div>
