--- a/dashboard.html
+++ b/dashboard.html
@@ -102,7 +102,7 @@
 
         <!-- left bottom -->
 
-        <div class="left-bottom d-flex flex-column flex-sm-row">
+        <div class="left-bottom justify-content-between d-flex flex-column flex-sm-row">
           <!-- left bottom left -->
           <div class="left-bottom-left d-flex align-items-center align-items-sm-start flex-column py-sm-3 pb-1">
             <div class="user-img mb-2 mb-sm-4">
@@ -114,7 +114,7 @@
           </div>
 
           <!-- left bottom right -->
-          <div class="left-bottom-right d-flex flex-column  py-sm-4 pt-2 pb-4 px-sm-5 px-3">
+          <div class="left-bottom-right d-flex flex-column justify-content-between ms-sm-3 py-sm-4 pt-2 pb-4 me-sm-5 me-md-5 me-lg-5">
             <div class="d-flex justify-content-sm-between justify-content-center">
               <div class="d-flex flex-column">
                 <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1">125</p>
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-sm-end justify-content-center">
-              <button class="view-insights px-3 py-3">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg" alt=""></button>
+              <button class="view-insights px-sm-3 py-sm-3 py-2 px-2">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg" alt=""></button>
             </div>
           </div>
         </div>
