update menu for mobile

--- a/dashboard.html
+++ b/dashboard.html
@@ -63,14 +63,19 @@
         <div class="ms-2 user-img-div">
           <img src="./images/profile-pic.png" alt="">
         </div>
+
+        <!-- burger icon -->
         <div>
-          <img class="burger" src="./images/profile-menu-icn.png" alt="burger icon">
-          <div class="menu">
-            <div class="px-3 py-2"> <a href=""><i class="pe-2 icn-user flaticon-user"></i>Account Settings</a>        </div>
-            <div class="px-3 py-2"><a href=""><i class="pe-2 flaticon-group"></i> Billing</a></div>
-            <div class="px-3 py-2"><a href=""><i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</a></div>
-            <div class="px-3 py-2"> <a href=""><i class="pe-2 flaticon-group"></i>Team</a></div>
-            <div class="px-3 py-2"> <a href=""><i class="pe-2 flaticon-rocket"></i> Integrations</a></div>
+          <div class="around-icon-burger">
+            <a class="burger-a" href="#nav-menu"><img type="button" class="burger" src="./images/profile-menu-icn.png" alt="burger icon"></a>
+          </div>
+          <!-- menu -->
+          <div class="menu" id="nav-menu">
+            <div class="px-3 py-2"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
+            <div class="px-3 py-2"> <i class="pe-2 flaticon-group"></i> Billing</div>
+            <div class="px-3 py-2"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
+            <div class="px-3 py-2"> <i class="pe-2 flaticon-group"></i>Team</div>
+            <div class="px-3 py-2"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
           </div>
         </div>
 
