--- a/dashboard.html
+++ b/dashboard.html
@@ -66,8 +66,9 @@
 
         <!-- burger icon -->
         <div>
-          <div class="around-icon-burger">
-            <a class="burger-a" href="#nav-menu"><img type="button" class="burger" src="./images/profile-menu-icn.png" alt="burger icon"></a>
+          <div class="ms-4">
+            <button class="btn burger-a" href="#nav-menu"><img  class="burger" src="./images/profile-menu-icn.png"
+                alt="burger icon"></button>
           </div>
           <!-- menu -->
           <div class="menu" id="nav-menu">
@@ -145,7 +146,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-sm-end justify-content-center">
-              <button class="view-insights px-sm-3 py-sm-3 py-2 px-2">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg"
+              <button class="view-insights px-sm-3 py-sm-3 py-1 px-1">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg"
                   alt=""></button>
             </div>
           </div>
@@ -236,6 +237,138 @@
       </div>
     </div>
   </main>
+
+  <!-- Appointment -->
+
+  <div class="appoint d-none d-md-block" >
+    <div class="appoint-container px-4 py-3">
+      <div class="appoint-head py-3 d-flex align-items-center">
+        <h2 class="text-uppercase">Upcoming Appointments</h2>
+        <button class="ms-auto  btn btn-outline-primary cal-btn"><i
+            class="c-blue far fa-calendar-alt fa-lg me-2"></i>Filter<i
+            class="c-blue fas fa-chevron-down ps-2"></i></button>
+      </div>
+
+      <!-- Table -->
+      <table class="table table-borderless">
+        <thead class="">
+          <tr>
+            <th scope="col">Service</th>
+            <th scope="col">Time</th>
+            <th scope="col">Staff</th>
+            <th scope="col">Location</th>
+            <th scope="col">Status</th>
+          </tr>
+
+        </thead>
+
+        <tbody class="bottom-border">
+          <tr class="">
+            <td class="note-td" scope="row">Chai Pe Charcha <img  class="note-img" src="./images/note-icn.png" alt="note"><div class="form-floating textarea-div">
+              <textarea class="form-control" rows="20" cols="10" placeholder="Note" id="floatingTextarea"></textarea><button class="txt-sbmt" type="submit">Save</button>
+              <label for="floatingTextarea">Note</label>
+            </div></td>
+            <td class="td-space">9:15am - 9:30am</td>
+            <td>
+              <div class="tb-user-div1">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 6.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td class="td-space">Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn1 btn dropdown-toggle" data-bs-toggle="dropdown">Pending<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a></li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">Evaluating The Design  ashagad<img  class="note-img" src="./images/note-icn.png" alt="note"><div class="form-floating textarea-div">
+              <textarea class="form-control" placeholder="Note" id="floatingTextarea"></textarea><button  class="txt-sbmt" type="submit">Save</button>
+              <label for="floatingTextarea">Note</label>
+            </div></td>
+            <td>9:15am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 4.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Client’s Location</td>
+            <td><button type="button" class="apt-btn apt-btn2 btn dropdown-toggle" data-bs-toggle="dropdown">Confirmed<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">Define The Problem <img  class="note-img" src="./images/note-icn.png" alt="note"><div class="form-floating textarea-div">
+              <textarea class="form-control" placeholder="Note" id="floatingTextarea"></textarea><button  class="txt-sbmt" type="submit">Save</button>
+              <label for="floatingTextarea">Note</label>
+            </div></td>
+            <td>9:14am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 5.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn3 btn dropdown-toggle" data-bs-toggle="dropdown">Rescheduled<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">The Problem <img  class="note-img" src="./images/note-icn.png" alt="note"><div class="form-floating textarea-div">
+              <textarea class="form-control" placeholder="Note" id="floatingTextarea"></textarea><button  class="txt-sbmt" type="submit">Save</button>
+              <label for="floatingTextarea">Note</label>
+            </div></td>
+            <td>9:14am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 7.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn4 btn dropdown-toggle" data-bs-toggle="dropdown">Cancelled<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  </div>
 
 
   <!-- Optional JavaScript; choose one of the two! -->
