--- a/dashboard.html
+++ b/dashboard.html
@@ -47,8 +47,8 @@
         <div class="around-icon"><img src="./images/icn.png" alt="icon"></div>
       </a>
       <!-- notification icon -->
-      <a class=" ms-md-1 ms-auto" href="#">
-        <div class="around-icon ">
+      <a class="ms-md-1 ms-auto" href="#">
+        <div class="around-icon">
           <i class="far fa-lg fa-bell ms-2 mt-2"></i>
           <div class="num d-flex align-items-center justify-content-center">
             <span>0</span>
@@ -72,11 +72,11 @@
           </div>
           <!-- menu -->
           <div class="menu" id="nav-menu">
-            <div class="px-3 py-2"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
-            <div class="px-3 py-2"> <i class="pe-2 flaticon-group"></i> Billing</div>
-            <div class="px-3 py-2"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
-            <div class="px-3 py-2"> <i class="pe-2 flaticon-group"></i>Team</div>
-            <div class="px-3 py-2"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
+            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
+            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-group"></i> Billing</div>
+            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
+            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-group"></i>Team</div>
+            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
           </div>
         </div>
 
