complete toggle create button on click

--- a/dashboard.html
+++ b/dashboard.html
@@ -72,11 +72,11 @@
           </div>
           <!-- menu -->
           <div class="menu" id="nav-menu">
-            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
-            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-group"></i> Billing</div>
-            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
-            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-group"></i>Team</div>
-            <div class="btn d-flex py-2 ps-3 pe-2"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-group"></i> Billing</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-group"></i>Team</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
           </div>
         </div>
 
@@ -92,9 +92,12 @@
     <div class="p-g-ul"><a class="p-g" href="#">Scheduled Events</a></div>
     <div class="p-g-ul"><a class="p-g d-none d-md-block" href="#">Work Flow</a></div>
 
+    <!-- Create Button -->
     <div class="ms-auto">
       <button class=" btn-create pe-3">+ Create</button>
-      <div class="create-div d-flex flex-column justify-content-center">
+
+      <!-- create button dropdown -->
+      <div class="create-div ">
         <div class="d-flex create-div-btn-div">
           <div class="d-flex align-items-start"><img src="./images/service-icn.png" alt=""></div>
           <div class="d-flex flex-column ms-2">
