dashboard upcoming event complete

--- a/dashboard.html
+++ b/dashboard.html
@@ -88,7 +88,7 @@
 
 
   <div class="nav-2 d-flex">
-    <div class="p-g-ul"><a class="p-g" aria-current="page" href="#">My Sessions</a></div>
+    <div class="p-g-ul"><a class="p-g p-g-open" aria-current="page" href="#upcoming-appointments">My Sessions</a></div>
     <div class="p-g-ul"><a class="p-g" href="#">Scheduled Events</a></div>
     <div class="p-g-ul"><a class="p-g d-none d-md-block" href="#">Work Flow</a></div>
 
@@ -124,7 +124,7 @@
 
   <!-- Main -->
 
-  <main>
+  <main id="upcoming-appointments">
     <div class="grid-main">
 
       <!-- left -->
@@ -262,7 +262,7 @@
 
   <!-- Appointment -->
 
-  <div class="appoint d-none d-md-block">
+  <div id="" class="appoint d-none d-md-block">
     <div class="appoint-container px-4 py-3">
       <div class="appoint-head py-3 d-flex align-items-center">
         <h2 class="text-uppercase">Upcoming Appointments</h2>
