--- a/dash-schedule-event.html
+++ b/dash-schedule-event.html
@@ -88,15 +88,15 @@
 
     <!-- navbar bottom -->
 
-    <div class="nav-2 d-flex justify-content-between">
-        <div class="d-flex align-items-center "><i class="fs-24 c-grey fas fa-chevron-circle-left"></i>
-            <p class="c-grey fs-24 mb-0 ms-2"> Back</p>
+    <div class="nav-2 d-sm-flex justify-content-between">
+        <div class="nav-2-1 d-sm-flex d-inline-block align-items-center "><i class="fs-24 c-grey fas fa-chevron-circle-left"></i>
+            <p class="c-grey fs-24 mb-0 ms-2 d-none d-md-block"> Back</p>
         </div>
-        <div>
+        <div class="nav-2-2 d-inline-block">
             <h2 class="mb-0 fs-30 underline"><span class="c-black">Add </span>Service <span class="c-black">Details</span></h2>
         </div>
-        <div class="d-flex">
-            <p class="fs-24 me-2 c-grey">Service Status </p>
+        <div class="nav-2-3 d-flex align-items-center">
+            <p class="fs-24 me-2 c-grey mb-0">Service Status </p>
             <!-- Rounded switch -->
             <label class="switch">
                 <input type="checkbox">
