complete for mobile

--- a/dash-schedule-event.html
+++ b/dash-schedule-event.html
@@ -96,7 +96,7 @@
             <h2 class="mb-0 fs-30 underline"><span class="c-black">Add </span>Service <span class="c-black">Details</span></h2>
         </div>
         <div class="nav-2-3 d-flex align-items-center">
-            <p class="fs-24 me-2 c-grey mb-0">Service Status </p>
+            <p class="fs-24 me-2 c-grey mb-0 serv-st">Service Status </p>
             <!-- Rounded switch -->
             <label class="switch">
                 <input type="checkbox">
@@ -111,15 +111,15 @@
         <div class="d-flex justify-content-md-center main-div">
             <div class="d-none d-lg-block"><img  class="illus-img mt-5 pt-5" src="./images/Illus2.png" alt="2 women"></div>
             <div class="main-div-right ms-0">
-                <div class="mb-5">
-                    <label for="exampleFormControlInput1" class="form-label fs-24 label-color">Service Name *</label>
+                <div class="mb-sm-5 mb-3">
+                    <label for="exampleFormControlInput1" class="form-label fs-24 label-color label-font-14">Service Name *</label>
                     <input type="text" class="form-control inp-width" id="exampleFormControlInput1"
                         >
                 </div>
 
 
-                <label for="inputGroupSelect03" class="fs-24 mb-2 label-color">Location *</label>
-                <div class="input-group mb-5">
+                <label for="inputGroupSelect03" class="fs-24 mb-2 label-color label-font-14">Location *</label>
+                <div class="input-group mb-sm-5 mb-3">
                     <select class="form-select inp-width" id="inputGroupSelect03" aria-label="Example select with button addon">
                         <option selected>Add a location</option>
                         <option value="1">Indore</option>
@@ -128,19 +128,19 @@
                     </select>
                 </div>
 
-                <div class="mb-5">
-                    <label for="exampleFormControlTextarea1" class="form-label fs-24 label-color">About Service</label>
+                <div class="mb-sm-5 mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label fs-24 label-color label-font-14">About Service</label>
                     <textarea class="form-control inp-width" id="exampleFormControlTextarea1" placeholder="Write a brief which best describes your service...." rows="3"></textarea>
                 </div>
 
-                <div class="mb-5">
-                    <label for="exampleFormControlInput4" class="form-label fs-24 label-color">Custom Link</label>
+                <div class="mb-sm-5 mb-3">
+                    <label for="exampleFormControlInput4" class="form-label fs-24 label-color label-font-14">Custom Link</label>
                     <input type="text" class="form-control inp-width" id="exampleFormControlInput4"
                         placeholder="eg: calendly.com/clippingcop/">
                 </div>
 
                 <div>
-                    <p class="fs-24 label-color">Service Color</p>
+                    <p class="fs-24 label-color label-font-14">Service Color</p>
                     <button class="color-btn c-yellow me-2"></button>
                     <button class="color-btn c-red me-2"></button>
                     <button class="color-btn c-dark-blue me-2"></button>
