--- a/index.html
+++ b/index.html
@@ -1,12 +1,427 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixture</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,800;0,900;1,200&display=swap"
+    rel="stylesheet">
+
+  <!-- Google Fonts Icons  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=content_copy"> -->
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+  <!-- Internal Style -->
+  <link rel="stylesheet" href="./styles/dashboard.css">
+
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/2f2ce22062.js" crossorigin="anonymous"></script>
+
+  <!-- Flat Icons -->
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+
+  <link rel="stylesheet" href="./font/flaticon.css">
+
+  <title>Fixture</title>
 </head>
+
 <body>
-    <h1>Hello Soumya</h1>
+
+  <!-- Nav -->
+
+  <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/prosymbols" title="Prosymbols">Prosymbols</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+
+  <!-- navbar top -->
+  <nav class="navbar pt-sm-5 pt-4 py-3">
+    <div class="container-fluid p-0">
+      <a href="#"><img class="brand-logo" src="./images/Logo.png" alt="logo"></a>
+      <a class=" ms-auto d-none d-md-block" aria-current="page" href="#">
+        <div class="around-icon"><img src="./images/icn.png" alt="icon"></div>
+      </a>
+      <!-- notification icon -->
+      <a class="ms-md-1 ms-auto" href="#">
+        <div class="around-icon">
+          <i class="far fa-lg fa-bell ms-2 mt-2"></i>
+          <div class="num d-flex align-items-center justify-content-center">
+            <span>0</span>
+          </div>
+        </div>
+      </a>
+      <div class="z-ind d-flex flex-row align-items-center">
+        <div class="d-none d-md-block mx-3 d-flex flex-column align-items-end justify-content-center">
+          <p class="p1 mb-0">David Morse</p>
+          <p class="p2 mb-0">Admin</p>
+        </div>
+        <div class="ms-2 user-img-div">
+          <img src="./images/profile-pic.png" alt="">
+        </div>
+
+        <!-- burger icon -->
+        <div>
+          <div class="ms-4">
+            <button class="btn burger-a" href="#nav-menu"><img class="burger" src="./images/profile-menu-icn.png"
+                alt="burger icon"></button>
+          </div>
+          <!-- menu -->
+          <div class="menu" id="nav-menu">
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 icn-user flaticon-user"></i>Account Settings </div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-group"></i> Billing</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-calendar-1"></i> Calendar Connection</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-group"></i>Team</div>
+            <div class="btn d-flex py-2 ps-3 pe-3"> <i class="pe-2 flaticon-rocket"></i> Integrations</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </nav>
+
+  <!-- navbar bottom -->
+
+
+  <div class="nav-2 d-flex">
+    <div class="p-g-ul"><a class="p-g p-g-open" aria-current="page" href="#upcoming-appointments">My Sessions</a></div>
+    <div class="p-g-ul"><a class="p-g" href="#">Scheduled Events</a></div>
+    <div class="p-g-ul"><a class="p-g d-none d-md-block" href="#">Work Flow</a></div>
+
+    <!-- Create Button -->
+    <div class="ms-auto">
+      <button class=" btn-create pe-3">+ Create</button>
+
+      <!-- create button dropdown -->
+      <div class="create-div ">
+        <div class="d-flex create-div-btn-div">
+          <div class="d-flex align-items-start"><img src="./images/service-icn.png" alt=""></div>
+          <div class="d-flex flex-column ms-2">
+            <p class="fs-18 fw-600 mb-1">Create New Service</p>
+            <p class="fs-12 fw-lighter c-light-grey lh-base mb-0">Lorem ipsum dolor sit amet, elit sed 
+              do eiusmod tempor.</p>
+          </div>
+        </div>
+        <div class="d-flex create-div-btn-div">
+          <div class="d-flex align-items-start ms-1 me-2"><img src="./images/client-icn.png" alt=""></div>
+          <div class="d-flex flex-column ms-2">
+            <p class="fs-18 fw-600 mb-1">Add New Client</p>
+            <p class="fs-12 fw-lighter c-light-grey lh-base mb-0">Lorem ipsum dolor sit amet, elit sed 
+              do eiusmod tempor.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <!-- Main -->
+
+  <main id="upcoming-appointments">
+    <div class="grid-main">
+
+      <!-- left -->
+      <div class="left pb-2">
+
+        <!-- left top -->
+        <div class="left-top d-flex somu justify-content-between">
+          <div class="d-flex flex-column pt-4 pb-5 pt-sm-5 pb-sm-0 pb-sm-0  align-items-center align-items-sm-start">
+            <h2 class="mb-2 text-center text-sm-start lh-base">Welcome Back!</h2>
+            <p class="user-name text-center text-sm-start lh-base pb-3"><span>David's Dashboard</span></p>
+          </div>
+          <div class="team-meet-img d-none d-sm-block">
+            <img class="" src="./images/Illus.png" alt="team meeting">
+          </div>
+        </div>
+
+        <!-- left bottom -->
+
+        <div class="left-bottom justify-content-between d-flex flex-column flex-sm-row">
+          <!-- left bottom left -->
+          <div class="left-bottom-left d-flex align-items-center align-items-sm-start flex-column py-sm-3 pb-1">
+            <div class="user-img mb-2 mb-sm-4">
+              <img src="./images/profile-pic.png" alt="user">
+            </div>
+
+            <p class="p-comp-name fw-bold mb-0 mt-sm-3">Beauty Box Salon</p>
+            <p class="p-comp-cat">Parlour/Grooming</p>
+          </div>
+
+          <!-- left bottom right -->
+          <div
+            class="left-bottom-right d-flex flex-column justify-content-between ms-sm-3 py-sm-4 pt-2 pb-4 me-sm-5 me-md-5 me-lg-5">
+            <div class="d-flex justify-content-sm-between justify-content-center">
+              <div class="d-flex flex-column">
+                <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1">125</p>
+                <p class="c-grey">Projects</p>
+              </div>
+              <div class="d-flex flex-column  ms-5 ms-sm-0">
+                <p class="fs-4 fw-bold c-orange mb-0 mb-sm-1 ">$123</p>
+                <p class="c-grey">Total Revenue</p>
+              </div>
+            </div>
+            <div class="d-flex justify-content-sm-end justify-content-center">
+              <button class="view-insights px-sm-3 py-sm-3 py-2 px-1">VIEW INSIGHTS <img src="./images/SPARK-ICN.svg"
+                  alt=""></button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Calendar -->
+      <div class="calender d-flex">
+        <!-- Search Bar -->
+        <!-- <form class="d-flex d-sm-none">
+          <i class="fas fa-search c-blue"></i><input class="form-control me-2" type="search" placeholder="Type To Search..." aria-label="Search">
+        </form> -->
+        <!-- calendar -->
+        <button class=" btn btn-outline-primary cal-btn"><i class="c-blue far fa-calendar-alt fa-lg me-2"></i>CALENDER
+          <i class="c-blue fas fa-chevron-down ps-2"></i></button>
+      </div>
+
+      <!-- Bottom Left -->
+      <div class="bottom-left d-flex flex-column">
+        <div class="d-flex flex-column justify-content-evenly px-4 pt-4">
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-column ">
+              <p class="fs-18 fw-700 c-orange mb-0">Kick Off Session</p>
+              <p><span class="fs-14 c-grey">15 mints, One on One</span></p>
+            </div>
+            <div>
+              <i type="button" class="c-blue far fa-lg fa-edit"></i>
+            </div>
+          </div>
+
+          <div class="mb-2">
+            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span type="button" class="fs-14">Google Meet
+              Conference</span>
+          </div>
+
+
+          <a href="#" class="fs-18 c-blue">View Event Page</a>
+
+        </div>
+
+        <div class="hr my-3"></div>
+
+        <div class="d-flex px-4 align-items-center">
+          <div type="button" class="d-flex copy-link">
+            <i class="c-blue far fa-lg fa-clone copy-link-icn"></i>
+            <p class="c-blue mb-0 ms-2"> Copy Link</p>
+          </div>
+          <i class="c-blue ms-auto fa-lg fas fa-share-square"></i>
+        </div>
+
+
+      </div>
+
+      <!-- Bottom Right -->
+      <div class="bottom-right d-flex flex-column">
+        <div class="d-flex flex-column justify-content-evenly px-4 pt-4">
+          <div class="d-flex justify-content-between">
+            <div class="d-flex flex-column ">
+              <p class="fs-18 fw-700 c-orange mb-0">Long Off Session</p>
+              <p><span class="fs-14 c-grey">30 mints, One on One</span></p>
+            </div>
+            <div>
+              <i type="button" class="c-blue far fa-lg fa-edit"></i>
+            </div>
+          </div>
+
+          <div class="mb-2">
+            <img class="g-meet-img" src="./images/gmeet-icn.png" alt=""><span type="button" class="fs-14">Google Meet
+              Conference</span>
+          </div>
+
+
+          <a href="#" class="fs-18 c-blue">View Event Page</a>
+
+        </div>
+
+        <div class="hr my-3"></div>
+
+        <div class="d-flex px-4 align-items-center">
+          <div type="button" class="d-flex copy-link">
+            <i class="c-blue far fa-lg fa-clone copy-link-icn"></i>
+            <p class="c-blue mb-0 ms-2"> Copy Link</p>
+          </div>
+          <i class="c-blue ms-auto fa-lg fas fa-share-square"></i>
+        </div>
+
+
+      </div>
+    </div>
+  </main>
+
+  <!-- Appointment -->
+
+  <div id="" class="appoint d-none d-md-block">
+    <div class="appoint-container px-4 py-3">
+      <div class="appoint-head py-3 d-flex align-items-center">
+        <h2 class="text-uppercase">Upcoming Appointments</h2>
+        <button class="ms-auto  btn btn-outline-primary cal-btn"><i
+            class="c-blue far fa-calendar-alt fa-lg me-2"></i>Filter<i
+            class="c-blue fas fa-chevron-down ps-2"></i></button>
+      </div>
+
+      <!-- Table -->
+      <table class="table table-borderless">
+        <thead class="">
+          <tr>
+            <th scope="col">Service</th>
+            <th scope="col">Time</th>
+            <th scope="col">Staff</th>
+            <th scope="col">Location</th>
+            <th scope="col">Status</th>
+          </tr>
+
+        </thead>
+
+        <tbody class="bottom-border">
+          <tr class="">
+            <td class="note-td" scope="row">Chai Pe Charcha <img class="note-img" src="./images/note-icn.png"
+                alt="note">
+              <div class="form-floating textarea-div">
+                <textarea class="form-control" rows="20" cols="10" placeholder="Note"
+                  id="floatingTextarea"></textarea><button class="txt-sbmt" type="submit">Save</button>
+                <label for="floatingTextarea">Note</label>
+              </div>
+            </td>
+            <td class="td-space">9:15am - 9:30am</td>
+            <td>
+              <div class="tb-user-div1">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 6.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td class="td-space">Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn1 btn dropdown-toggle" data-bs-toggle="dropdown">Pending<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">Evaluating The Design<img class="note-img" src="./images/note-icn.png"
+                alt="note">
+              <div class="form-floating textarea-div">
+                <textarea class="form-control pt-1" placeholder="Note" id="floatingTextarea"></textarea>
+                <label for="floatingTextarea"></label><button class="txt-sbmt" type="submit">Save</button>
+              </div>
+            </td>
+            <td>9:15am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 4.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Client’s Location</td>
+            <td><button type="button" class="apt-btn apt-btn2 btn dropdown-toggle" data-bs-toggle="dropdown">Confirmed<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">Define The Problem <img class="note-img" src="./images/note-icn.png"
+                alt="note">
+              <div class="form-floating textarea-div">
+                <textarea class="form-control" placeholder="Note" id="floatingTextarea"></textarea><button
+                  class="txt-sbmt" type="submit">Save</button>
+                <label for="floatingTextarea">Note</label>
+              </div>
+            </td>
+            <td>9:14am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 5.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn3 btn dropdown-toggle"
+                data-bs-toggle="dropdown">Rescheduled<i class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td scope="row" class="note-td">The Problem <img class="note-img" src="./images/note-icn.png" alt="note">
+              <div class="form-floating textarea-div">
+                <textarea class="form-control" placeholder="Note" id="floatingTextarea"></textarea><button
+                  class="txt-sbmt" type="submit">Save</button>
+                <label for="floatingTextarea">Note</label>
+              </div>
+            </td>
+            <td>9:14am - 9:30am</td>
+            <td>
+              <div class="tb-user-div">
+                <div class="tb-user-img-div d-inline-block"><img src="./images/Ellipse 7.png" alt="staff"></div><span
+                  class="ms-3">Nitesh Jaiswal</span>
+              </div>
+            </td>
+            <td>Zoom Location</td>
+            <td><button type="button" class="apt-btn apt-btn4 btn dropdown-toggle" data-bs-toggle="dropdown">Cancelled<i
+                  class="ms-3 fas fa-chevron-down ms-4"></i></button>
+              <ul class="dropdown-menu apt-btn-dropdown">
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/confirm-icn.png"
+                      alt="">Confirm</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-3" src="./images/RESCHEDULE-ICN.png"
+                      alt="">Reschedule</a></li>
+                <li><a class="dropdown-item" href="#"><img class="me-2" src="./images/cancel-icn.png" alt="">Cancel</a>
+                </li>
+              </ul>
+            </td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  </div>
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    -->
+
+  <script src="./JS/dashboard.js"></script>
 </body>
+
 </html>
